# qmlQtBPractice2

./: CMakeLists.txt  Dialog.qml  KeyPress.qml  LabeledTextInput.qml  ListViewModel.qml  Main.qml  Navigation.qml  Page1.qml  Page2.qml  Page3.qml  QtControllers.qml  TextEdit.qml  anchorsPositions.qml  flows.qml  inputs.qml  keyPositions.qml  layout.qml  main.cpp  margins.qml  mouseArea.qml  pathView.qml  siblings.qml  tableView.qml
xml/: employees.xml
